# wows-lootbox-bot

./: .gitignore  Cargo.toml  README.md
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/frontend/src/onebot11/: event.rs  message.rs  mod.rs  serde_utils.rs
crates/frontend/src/onebot11/api/: endpoint.rs  message.rs  mod.rs  request.rs  response.rs
crates/wows-box/: Cargo.toml
crates/wows-box-fetch/: Cargo.toml  NOTES.md
crates/wows-box-fetch/src/: album.rs  currency.rs  item.rs  lib.rs  list.rs  lootbox.rs
crates/wows-box-rand/: Cargo.toml
crates/wows-box-rand/src/: rand.rs
crates/wows-box-rand/tests/: test_rand_multi.rs  test_rand_single.rs
crates/wows-box-render/: Cargo.toml
crates/wows-box-render/src/: html.rs  lib.rs  process.rs
crates/wows-box-render/templates/: lootbox.jinja
crates/wows-box-render/tests/: test_rand_process.rs  test_rand_render.rs
crates/wows-box/src/: currencies.rs  item.rs  lib.rs  lootbox.rs
utils/: Cargo.toml
utils/src/: as_static_str.rs  async_fn.rs  lib.rs  serde_int_str.rs  trial.rs
