[workspace]
members = [
    "bin/wows-rand-box",
    "bin/wows-box-data-update",
    "crates/wows-box",
    "crates/wows-box-render",
    "crates/wows-box-fetch",
    "crates/wows-box-rand",
    "crates/frontend",
    "utils",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
log = "0.4.22"
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["json", "gzip"] }
serde = { version = "1.0.209", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
bson = { version = "2.11.0", features = ["serde_with"] }
mongodb = { version = "3.0.1", default-features = false, features = [
    "compat-3-0-0",
    "rustls-tls",
] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
rand = { version = "0.8.5", features = ["small_rng"] }
headless_chrome = "1.0.13"
itertools = "0.13.0"
lazy_static = "1.5.0"
futures = "0.3.30"
thiserror = "1.0.63"
fancy-default = "0.1.0"
log4rs = { version = "1.3.0", features = ["gzip"] }
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "6.0.1"
serde_repr = "0.1.19"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
ordered-float = "4.2.2"
once_cell = "1.19.0"
async_once = "0.2.6"
axum-extra = { version = "0.9.3", features = ["query"] }
env_logger = "0.11.5"
strsim = "0.11.1"
minijinja = "2.2.0"
