[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../../utils"}

fancy-default = { workspace = true }
log4rs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
serde_repr = { workspace = true }
reqwest = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
